# ri-aggregation

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-runner.yml  docker-compose.ci.unit-tests.yml  docker-compose.ci.yml  docker-compose.deploy.yml  docker-compose.yml  init-deployment.sh  init-prover.sh  init.sh  package.json  start.sh
.github/: pull_request_template.md
.github/archives/: ci.yml  loadtest.yml
.github/workflows/: ci-iov-lint.yml  ci-iov-sim-tool.yml  ci-iov.yml  ci.yml  convert-draft.yml  docker.yml  environment.docker.yml  loadtest.yml
contracts/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: AdditionalZkSync.sol  Config.sol  DeployFactory.sol  ForcedExit.sol  Governance.sol  PlonkCore.sol  Storage.sol  ZkSync.sol  ZkSyncNFTFactory.sol
contracts/scripts/: deploy-eip1271.ts  deploy-erc20.ts  deploy-testkit.ts  deploy-testnet-token.ts  deploy-withdrawal-helpers.ts  deploy.ts  governance-add-erc20.ts  init-faucet-account.ts  publish.ts  server-add-erc20.ts  test-upgrade-franklin.ts  upgrade-testnet.ts  utils.ts  verify-deployed-contract.ts
contracts/src.ts/: deploy.ts  (+1 more)
core/: README.md
core/lib/wallet_creator/: Cargo.toml  README.md
core/lib/wallet_creator/src/: lib.rs  main.rs
core/lib/wallet_creator/tests/: integration.rs  unit.rs
docs/: architecture.md  contract.md  deployment.md  development.md  launch.md  protocol.md  setup-dev.md  tokens.md  upgrade_mechanism.md
infrastructure/: README.md
(+413 files in other folders)
