[package]
name = "rif_aggreation_wallet_creator"
version = "1.0.0"
edition = "2018"
authors = ["RIF <hello@rifos.org>"]
homepage = "https://www.rifos.org/"
repository = "https://github.com/matter-labs/zksync"
license = "Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[dependencies]
zksync_types = { path = "../../lib/types", version = "1.0" }
zksync_eth_client = { path = "../../lib/eth_client", version = "1.0" }
zksync_eth_signer = { path = "../../lib/eth_signer", version = "1.0" }
zksync_config = { path = "../../lib/config", version = "1.0" }
zksync_crypto = { path = "../../lib/crypto", version = "1.0" }
zksync_utils = { path = "../../lib/utils", version = "1.0" }
zksync = { path = "../../../sdk/zksync-rs", version = "0.3.0" }

sha2 = "0.8"
web3 = "0.16.0"
ethabi = "14.0.0"
tokio = { version = "1", features = ["time"] }
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "17"
num = { version = "0.3.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hex = "0.4"
zksync_test_account = { path = "../../tests/test_account" }
zksync_config = { path = "../config", version = "1.0" }

[features]
integration-tests = []
mint = []
